--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.foraged</groupId>
-    <artifactId>tnt-game</artifactId>
+    <artifactId>color-game</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
