--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,3 @@
-name: "TNTRun"
-main: "dev.foraged.tntgame.TNTGamePlugin"
+name: "ColorRun"
+main: "dev.foraged.colorgame.ColorGamePlugin"
 version: "1.0-SNAPSHOT"
